# loginApp

./: pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/api/: serializer.py  urls.py  views.py
backend/loginApp/: settings.py  urls.py
backend/myproject/: models.py
backend/myproject/migrations/: 0001_initial.py
frontend/loginApp/: README.md  package-lock.json  package.json
frontend/loginApp/src/: App.vue  main.js
frontend/loginApp/src/components/: navbar.vue
frontend/loginApp/src/components/icons/: IconSupport.vue
frontend/loginApp/src/router/: index.js
frontend/loginApp/src/views/: DataView.vue  HomeView.vue  LoginView.vue  LogoutView.vue  RegisterView.vue
